welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
			avance()
                              ^SlugTracking:16: error: type mismatch;
 found   : Unit
 required: Boolean
			gauche()
                              ^SlugTracking:19: error: type mismatch;
 found   : Unit
 required: Boolean
		droite()
                      ^SlugTracking:18: error: type mismatch;
 found   : Unit
 required: Boolean
		else if (estFaceMur) {
                     ^SlugTracking:24: error: type mismatch;
 found   : Unit
 required: Boolean
		gauche()
                      ^SlugTracking:28: error: type mismatch;
 found   : Unit
 required: Boolean
		droite()
                      ^SlugTracking:26: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (checkVert==false) {
             ^